--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
                 </div>
             </div>
         </div>
+        <div class="second">
+            <div class="elem"> 
+                <h1>THE PLUG</h1>
+                <h5>2024</h5>
+            </div>
+            <div class="elem"> 
+                <h1>IXPERIENCE</h1>
+                <h5>2024</h5>
+            </div>
+            <div class="elem elem-last"> 
+                <h1>HUDU</h1>
+                <h5>2025</h5>
+            </div>
+        </div>
 
     </div>
     <script src="script.js"></script>
