--- a/index.html
+++ b/index.html
@@ -36,19 +36,45 @@
         </div>
         <div class="second">
             <div class="elem"> 
+                <img src="./Img/plug.png" alt="#">
                 <h1>THE PLUG</h1>
                 <h5>2024</h5>
             </div>
             <div class="elem"> 
+                <img src="./Img/ixperience.png" alt="#">
                 <h1>IXPERIENCE</h1>
                 <h5>2024</h5>
             </div>
             <div class="elem elem-last"> 
+                <img src="./Img/hudu.png" alt="#">
                 <h1>HUDU</h1>
                 <h5>2025</h5>
             </div>
         </div>
-
+        <div class="about">
+        <img src="https://www.cynthiaugwu.com/images/cynthia.png" alt="">    
+        <div class="textabout">
+            <h5>(ABOUT ME)</h5>
+            <p>I'm a product designer with a passion for creating products that not only look good but also solve real problems. When I'm not sketching ideas on paper, you can find me binge-watching a Netflix series or playing video games. My design philosophy is simple: make it visually appealing, functional, and bring a smile to people's faces. I'm the designer you want on your team if you want to make people say 'I need that in my life!'.</p>
+            <a href="#">Let's talk</a>
+        </div>
+        </div>
+        <div class="subscribe">
+            <h5>(forgot to mention)</h5>
+            <h3>Subscribe to my youtube<i class="ri-arrow-right-up-line"></i></h3>
+        </div>
+        <div class="footer">
+            <div class="footerleft">
+                <h5>2023 &copy;</h5>
+                <h5>0:05 AM EST</h5>
+            </div>
+            <div class="footerright">
+                <a href="#">DRIBBBLE</a>
+                <a href="#">INSTAGRAM</a>
+                <a href="#">LINKEDIN</a>
+                <a href="#">TWITTER</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
