--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Loco.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class ="mini-circle"></div>
     <div class="main">
         <div class="hero">
             <div class="nav">
@@ -15,15 +17,26 @@
                 <h2>MENU +</h2>
             </div>
             <div class="heading">
-                <h1>Product</h1>
+                <div class="bounding">
+                    <h1 class="bounding-elem">Product</h1>
+                </div>
                 <div class="blocktext">
-                <h1 id="secondh1">Designer</h1>
-                <h5>Based in toronto</h5>
+                    <div class="bounding">
+                    <h1 class="bounding-elem" id="secondh1">Designer</h1>
+                </div>
+                <div class="bounding">
+                    <h5 class="bounding-elem">Based in toronto</h5>
+                </div>
                 </div>
             </div>
             <div class="Mini-hedaing">
-                <h5>available for freelance</h5>
-                <h5>work from may 23'</h5>
+                <div class="bounding">
+                    <h5 class="bounding-elem">available for freelance</h5>
+                </div>
+                 <div class="bounding">
+                    <h5 class="bounding-elem">work from may 23'</h5>
+                </div>
+                
             </div>
             <div class="hero-footer">
                 <a href="#">Aagay Jaoo Brother<i class="ri-arrow-right-up-line"></i></a>
@@ -76,6 +89,8 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
