--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             </div>
             <div class="heading">
                 <div class="bounding">
-                    <h1 class="bounding-elem">Product</h1>
+                    <h1 class="boundingelem">Product</h1>
                 </div>
                 <div class="blocktext">
                     <div class="bounding">
-                    <h1 class="bounding-elem" id="secondh1">Designer</h1>
+                    <h1 class="boundingelem" id="secondh1">Designer</h1>
                 </div>
                 <div class="bounding">
-                    <h5 class="bounding-elem">Based in toronto</h5>
+                    <h5 class="boundingelem">Based in toronto</h5>
                 </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <h5 class="bounding-elem">available for freelance</h5>
                 </div>
                  <div class="bounding">
-                    <h5 class="bounding-elem">work from may 23'</h5>
+                    <h5 class="boundingelem">work from may 23'</h5>
                 </div>
                 
             </div>
