--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Loco.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Cynthia_website</title>
 </head>
 <body>
     <div class ="mini-circle"></div>
@@ -51,12 +51,12 @@
             <div class="elem"> 
                 <img src="./Img/plug.png" alt="#">
                 <h1>THE PLUG</h1>
-                <h5>2024</h5>
+                <h5>2025</h5>
             </div>
             <div class="elem"> 
                 <img src="./Img/ixperience.png" alt="#">
                 <h1>IXPERIENCE</h1>
-                <h5>2024</h5>
+                <h5>2025</h5>
             </div>
             <div class="elem elem-last"> 
                 <img src="./Img/hudu.png" alt="#">
@@ -79,7 +79,7 @@
         <div class="footer">
             <div class="footerleft">
                 <h5>2023 &copy;</h5>
-                <h5>0:05 AM EST</h5>
+                <h5>Pho->_1234567890</h5>
             </div>
             <div class="footerright">
                 <a href="#">DRIBBBLE</a>
@@ -89,7 +89,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
     <script src="script.js"></script>
 </body>
